--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,3 +36,9 @@ jobs:
 
       - name: Check Style
         run: test -z $(go fmt ./...)
+
+      - name: Install static check
+        run: go install honnef.co/go/tools/cmd/staticcheck@latest 
+
+      - name: Use static check
+        run: staticcheck ./...
