--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -34,4 +34,4 @@ jobs:
         run: 'gcloud info'
 
       - name: 'Push build'
-        run: gloud builds submit --tag us-central1-docker.pkg.dev/notely-447208/notely-ar-repo/notely:latest
+        run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-447208/notely-ar-repo/notely:latest .
