--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,6 +9,8 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
 
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
     steps:
       - name: Code checkout
         uses: actions/checkout@v4
@@ -20,6 +22,12 @@ jobs:
 
       - name: Build app
         run: ./scripts/buildprod.sh
+
+      - name: Add goose
+        run: go install github.com/pressly/goose/v3/cmd/goose@latest
+
+      - name: Migrations
+        run: ./scripts/migrateup.sh
 
 
       - id: 'auth'
@@ -38,4 +46,3 @@ jobs:
           
       - name: 'Deploy to cloud'
         run: gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-447208/notely-ar-repo/notely:latest --region us-central1 --allow-unauthenticated --project notely-447208 --max-instances=4
-          
